small fixes when UI breaks on dekstop

--- a/src/components/ChefOfTheWeekSection/ChefOfTheWeekSection.scss
+++ b/src/components/ChefOfTheWeekSection/ChefOfTheWeekSection.scss
@@ -14,15 +14,15 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 80%;
       gap: 45px;
     }
 
-    @include desktop {
+    @include smallDesktopScreen {
       display: flex;
       flex-flow: column;
       justify-content: center;
       align-items: flex-start;
+      padding: 80px 127.5px;
     }
 
     .chef-of-the-week-title-container {
@@ -33,7 +33,7 @@
       letter-spacing: 1.25px;
 
       @include tablet {
-        width: 100%;
+        width: 93.9585973807%;
         height: 35px;
         font-size: 30px;
         line-height: 35px;
@@ -46,7 +46,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
+      width: 100%;
       gap: 24px;
 
       @include tablet {
@@ -56,10 +57,10 @@
         justify-content: center;
       }
 
-      @include desktop {
+      @include smallDesktopScreen {
         display: flex;
         flex-flow: row wrap;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         gap: 63.5px;
       }
@@ -69,7 +70,7 @@
         width: 335px;
         height: 262px;
 
-        @include desktop {
+        @include smallDesktopScreen {
           width: 478px;
           height: 372px;
         }
@@ -95,7 +96,7 @@
           text-align: center;
           background-color: rgba(255, 255, 255, 0.8);
 
-          @include desktop {
+          @include smallDesktopScreen {
             height: 78px;
             font-size: 40px;
             font-weight: 400;
@@ -114,7 +115,7 @@
         letter-spacing: 1.25px;
         text-align: justify;
 
-        @include desktop {
+        @include smallDesktopScreen {
           width: 642px;
           height: 255px;
           font-size: 24px;
@@ -133,7 +134,7 @@
       gap: 16px;
       padding-top: 32px;
 
-      @include desktop {
+      @include smallDesktopScreen {
         display: flex;
         flex-flow: column;
         width: 725px;
@@ -149,7 +150,7 @@
         text-align: left;
 
         @include tablet {
-          width: 665px;
+          width: 100%;
           height: 35px;
           font-size: 30px;
           line-height: 35px;
@@ -157,7 +158,7 @@
           text-align: center;
         }
 
-        @include desktop {
+        @include smallDesktopScreen {
           width: 665px;
           height: 35px;
           font-size: 30px;
